fixed some positioning

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         .illustration {
           background-image: url("./images/illustration-woman-online-desktop.svg"),
             url("./images/bg-pattern-desktop.svg");
-          background-position: -17% 50%, left -546px bottom -145px;
+          background-position: -17% 50%, left -571px bottom -145px;
         }
       }
     </style>
@@ -78,7 +78,7 @@
   <body>
     <div class="background flex min-h-screen items-center justify-center">
       <div
-        class="illustration group relative my-44 mx-3 mb-32 flex w-[800px] max-w-fit flex-col items-center justify-center space-y-9 rounded-3xl bg-white bg-[url('./images/bg-pattern-mobile.svg')] bg-top bg-no-repeat px-8 py-20 pt-20 shadow-lg lg:my-0 lg:mb-0 lg:h-[512px] lg:max-w-full lg:flex-row lg:space-y-0 lg:pt-20"
+        class="illustration group relative my-44 mx-3 mb-32 flex w-[923px] max-w-fit flex-col items-center justify-center space-y-9 rounded-3xl bg-white bg-[url('./images/bg-pattern-mobile.svg')] bg-top bg-no-repeat px-8 py-20 pt-20 shadow-lg lg:my-0 lg:mb-0 lg:h-[512px] lg:max-w-full lg:flex-row lg:space-y-0 lg:pt-20"
       >
         <img
           src="./images/illustration-woman-online-mobile.svg"
@@ -87,18 +87,18 @@
         />
         <img
           src="./images/illustration-box-desktop.svg"
-          class="absolute top-48 -left-28 hidden origin-center duration-300 group-hover:-left-20 lg:block"
+          class="absolute top-48 -left-[94px] hidden origin-center duration-300 group-hover:-left-32 lg:block"
           alt="box"
         />
         <div
           class="hidden bg-[url('./images/bg-pattern-desktop.svg')] bg-contain lg:block lg:w-1/2"
         ></div>
         <div
-          class="flex flex-col items-center justify-center space-y-5 lg:w-1/2"
+          class="flex flex-col items-center lg:items-start justify-center space-y-5 lg:w-1/2 lg:px-9"
         >
           <h1 class="text-3xl font-bold uppercase">Faq</h1>
           <div
-            class="text-veryDarkGrayishBlue flex w-[280px] flex-col items-stretch"
+            class="text-veryDarkGrayishBlue flex w-[280px] flex-col items-stretch lg:w-[90%]"
           >
             <!-- ITME 1 -->
             <details
